[gd_scene load_steps=4 format=3 uid="uid://b0wixtx2mu6uf"]

[ext_resource type="Script" uid="uid://bcyoaq11b03q3" path="res://entities/menu/hero_select/hero_selection.gd" id="1_e3061"]
[ext_resource type="Texture2D" uid="uid://dqiab4kf5k0sl" path="res://models/sprites/ui/hero_select_default.png" id="2_d1nio"]
[ext_resource type="Texture2D" uid="uid://ph203wrpu15w" path="res://models/sprites/ui/hero_select_selected.png" id="3_dknxu"]

[node name="HeroSelection" type="Control"]
custom_minimum_size = Vector2(168, 256)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1032.0
offset_bottom = -544.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e3061")
border_default = ExtResource("2_d1nio")
border_selected = ExtResource("3_dknxu")

[node name="HeroImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.0
offset_right = 79.0
offset_bottom = 256.0
grow_horizontal = 2
action_mode = 0
texture_normal = ExtResource("2_d1nio")
texture_pressed = ExtResource("3_dknxu")
texture_hover = ExtResource("3_dknxu")

[node name="NameImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -58.0
offset_right = 73.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
expand_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
